--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -1,4 +1,3 @@
-{% extends 'layout.html'%}
-{% block content %}
-<div class="home"></div>
-{% endblock %}
+{% extends "layout.html" %}
+{% block content %} 
+{% endblock content %}
