--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -1,3 +1,18 @@
 {% extends "layout.html" %}
 {% block content %} 
+<div class="landing">
+    <div class="svg-container">
+        <!-- I crated SVG with: https://codepen.io/anthonydugois/pen/mewdyZ -->
+        <svg viewbox="0 0 800 400" class="svg">
+          <path id="curve" fill="#b83d57" d="M 800 300 Q 400 350 0 300 L 0 0 L 800 0 L 800 300 Z">
+          </path>
+        </svg>
+        <h1>Space Connect</h1>
+        <br>
+        <q>To achieve infinity and beyond</q>
+      </div>
+</div>
+<div class="c"></div>
+<div class="c"></div>
+<div class="c"></div>
 {% endblock content %}
