--- a/spaceconnect/static/main.css
+++ b/spaceconnect/static/main.css
@@ -51,3 +51,17 @@ li a:hover:not(.active) {
 .c{
     height: 100vh;
 }
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  ::-webkit-scrollbar-track {
+    background: transparent;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: #eee;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+  }
