--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -2,7 +2,6 @@
 {% block content %} 
 <div class="landing">
     <div class="svg-container">
-        <!-- I crated SVG with: https://codepen.io/anthonydugois/pen/mewdyZ -->
         <svg viewbox="0 0 800 400" class="svg">
           <path id="curve" fill="#b83d57" d="M 800 300 Q 400 350 0 300 L 0 0 L 800 0 L 800 300 Z">
           </path>
@@ -12,7 +11,23 @@
         <q>To achieve infinity and beyond</q>
       </div>
 </div>
-<div class="c"></div>
+<div class="c">
+    <h1>
+        About Us
+    </h1>
+    <hr class="hr">
+    <ul class="para-div">
+        <li>
+            <img src="https://media.discordapp.net/attachments/741244174736556076/840285035970297936/unknown.png" alt="earth">
+        </li>
+        <li>
+            <p>
+                In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are almost there to achieve the milestone that we dreamt of <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
+            </p>
+        </li>
+    </ul>
+    
+</div>
 <div class="c"></div>
 <div class="c"></div>
 {% endblock content %}
