--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -18,7 +18,9 @@
     <hr class="hr">
     <ul class="para-div">
         <li>
+            <div class="img">
             <img src="https://media.discordapp.net/attachments/741244174736556076/840285035970297936/unknown.png" alt="earth">
+            </div>
         </li>
         <li>
             <p>
