--- a/spaceconnect/templates/layout.html
+++ b/spaceconnect/templates/layout.html
@@ -9,6 +9,7 @@
     {% else %}
         <title>SpaceConnect</title>
     {% endif %}
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100&family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link rel="icon" href="https://media.discordapp.net/attachments/741244174736556076/839414477920796702/icon.png">
@@ -27,7 +28,12 @@
       <li><a  href="{{ url_for('register') }}">Register</a>
       {% endif %}
       </ul>
-</header>
+  </header>
       {% block content %}{% endblock %}
-</body>
+    <footer>
+      <center>
+      <h6>Made with <i class="fa fa-heart"></i> by Yuvraaj Narula</h6>
+    </center>
+    </footer>
+    </body>
 </html>
