--- a/spaceconnect/templates/about.html
+++ b/spaceconnect/templates/about.html
@@ -1,4 +1,30 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <div class="missions">
+    <center>
+        <h1>Missions</h1>
+        <br>
+        <hr class="missions-hr">
+    </center>
+    <br>
+    <div class="mission-1">
+
+    </div>
+    <br>
+    <div class="mission-1">
+
+    </div>
+    <br>
+    <div class="mission-1">
+
+    </div>
+    <br>
+    <center>
+    <hr class="mission-hr-1">
+    <br>
+        <h4>*INTRESTED CANDIDATES NEED TO CREATE AN ACCOUNT FOR APPLYING FORMS FOR THESE MISSIONS*</h4>
+    <br>
+    <hr class="mission-hr-1">
+    </center>
+</div>
 {% endblock content %}
