--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -11,7 +11,7 @@
         <q>To achieve infinity and beyond</q>
       </div>
 </div>
-<div class="c">
+<div class="about">
     <h1>
         About Us
     </h1>
@@ -30,6 +30,23 @@
     </ul>
     
 </div>
-<div class="c"></div>
-<div class="c"></div>
+<div class="aim">
+    <h1>
+        What's our goal?
+    </h1>
+    <br>
+    <hr>
+    <br>
+    <ul class="aim-content">
+        <li>
+             <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. At facilis quibusdam inventore. Fugiat omnis consequuntur, voluptatibus, magnam repudiandae magni porro vitae esse qui illum numquam aliquid error sint aliquam recusandae?
+            </p>
+        </li>
+        <li>
+            <img src="https://media.discordapp.net/attachments/741244174736556076/840476092321759242/unknown.png" alt="earth" >
+        </li>
+    </ul>
+    
+</div>
 {% endblock content %}
