--- a/spaceconnect/templates/about.html
+++ b/spaceconnect/templates/about.html
@@ -8,17 +8,22 @@
     </center>
     <br>
     <div class="mission-1">
-
+        
     </div>
     <br>
+
     <div class="mission-1">
 
     </div>
     <br>
     <div class="mission-1">
+        <center>
+            <h2>Mission 3 will be out soon</h2>
+        </center>
+        <br>
 
     </div>
-    <br>`
+    <br>
     <center>
     <hr class="mission-hr-1">
     <br>
@@ -26,5 +31,7 @@
     <br>
     <hr class="mission-hr-1">
     </center>
+    <br>
+    <br>
 </div>
 {% endblock content %}
