--- a/spaceconnect/templates/login.html
+++ b/spaceconnect/templates/login.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form class="form-2" method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend >Log In</legend>
