--- a/spaceconnect/templates/register.html
+++ b/spaceconnect/templates/register.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form class="form-1" method="POST" action="">
             {{ form.hidden_tag() }}
-            <fieldset class="form-group">
+            <fieldset class="form-group" >
                 <legend >Join Today</legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
@@ -62,11 +62,15 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
+            <br>
+            <hr class="form-hr">
+            <br>
+            <div>
+                <small class="text">
+                    Already have an account <a  href="{{ url_for('login') }}">Login Now</a>              </small
+                </small>
+            </div>
         </form>
     </div>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
-        </small>
-    </div>
+    
 {% endblock content %}
