--- a/spaceconnect/templates/about.html
+++ b/spaceconnect/templates/about.html
@@ -6,32 +6,48 @@
         <br>
         <hr class="missions-hr">
     </center>
-    <br>
+    <br>    <br>    <br>
     <div class="mission-1">
-        
+        <div class="about">
+            <h4>
+               <i>Mission 1: Mining & Bomb testing</i>
+            </h4>
+            <hr class="hr">
+            <ul class="para-div">
+                <li>
+                    <div class="img">
+                    <img src="https://media.discordapp.net/attachments/741244174736556076/840293347255910440/unknown.png" alt="earth">
+                    </div>
+                </li>
+                <li>
+                    <p>
+                        In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are almost there to achieve the milestone that we dreamt of <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
+                    </p>
+                </li>
+            </ul>
+            
     </div>
     <br>
 
     <div class="mission-1">
-
+        <div class="about">
+            <h4>
+               <i>Mission 2: Setting up of a small village near Sector-1Z2</i>
+            </h4>
+            <hr class="hr">
+            <ul class="para-div">
+                <li>
+                    <div class="img">
+                    <img src="https://media.discordapp.net/attachments/741244174736556076/840292847370502164/unknown.png" alt="earth">
+                    </div>
+                </li>
+                <li>
+                    <p>
+                        In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are almost there to achieve the milestone that we dreamt of <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
+                    </p>
+                </li>
+            </ul>
+            
     </div>
     <br>
-    <div class="mission-1">
-        <center>
-            <h2>Mission 3 will be out soon</h2>
-        </center>
-        <br>
-
-    </div>
-    <br>
-    <center>
-    <hr class="mission-hr-1">
-    <br>
-        <h4>*INTRESTED CANDIDATES NEED TO CREATE AN ACCOUNT FOR APPLYING FORMS FOR THESE MISSIONS*</h4>
-    <br>
-    <hr class="mission-hr-1">
-    </center>
-    <br>
-    <br>
-</div>
 {% endblock content %}
