--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -47,6 +47,7 @@
             <img src="https://media.discordapp.net/attachments/741244174736556076/840476092321759242/unknown.png" alt="earth" >
         </li>
     </ul>
-    
+
 </div>
+<script src="{{url_for('static', filename='app.js')}}"></script>
 {% endblock content %}
