--- a/spaceconnect/templates/layout.html
+++ b/spaceconnect/templates/layout.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="https://media.discordapp.net/attachments/741244174736556076/839414477920796702/icon.png">
 </head>
 <body>
-  
+    </div>
     <header class="site-header">
       <ul class="navbar">
       <li><a  href="{{ url_for('home') }}">Home</a>
