--- a/spaceconnect/static/main.css
+++ b/spaceconnect/static/main.css
@@ -201,3 +201,89 @@ footer i {
 .mission-1 h4{
     margin-left: 5em;
 }
+#preloader {
+    height: 100%;
+    width: 100%;
+    background-image: linear-gradient(45deg,#000,#111,#333);
+    position: fixed;
+    left: 0;
+    background-size: 400%;
+    top: 0;
+    z-index: 10000;
+    perspective: 1600px;
+    perspective-origin: 20% 50%;
+    transition: 0.5s all;
+    opacity: 1;
+    animation: bg-animation 30s infinite alternate;
+  }
+  
+  @keyframes bg-animation {
+    0%,100% {
+      background-position: left;
+    }
+  
+    50% {
+      background-position: right;
+    }
+  }  
+  #preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+  
+  #loader {
+    display: block;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    width: 150px;
+    height: 150px;
+    margin: -75px 0 0 -75px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: white;
+    -webkit-animation: spin 2s linear infinite;
+    animation: spin 2s linear infinite;
+  }
+  
+  #loader:before {
+    content: "";
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    right: 5px;
+    bottom: 5px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: white;
+    -webkit-animation: spin 3s linear infinite;
+    animation: spin 3s linear infinite;
+  }
+  
+  #loader:after {
+    content: "";
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    right: 15px;
+    bottom: 15px;
+    border-radius: 50%;
+    border: 3px solid transparent;
+    border-top-color: white;
+    -webkit-animation: spin 1.5s linear infinite;
+    animation: spin 1.5s linear infinite;
+  }
+    
+  @keyframes spin {
+    0% {
+      transform: rotate(0deg);
+    }
+  
+    100% {
+      border-top-color: #b83d57;
+      transform: rotate(360deg);
+    }
+  }
