--- a/spaceconnect/templates/register.html
+++ b/spaceconnect/templates/register.html
@@ -60,7 +60,7 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn btn-outline-info") }}
+                {{ form.submit(class="btn ") }}
             </div>
             <br>
             <hr class="form-hr">
