account and apply

--- a/spaceconnect/templates/layout.html
+++ b/spaceconnect/templates/layout.html
@@ -21,7 +21,8 @@
       <li><a  href="{{ url_for('home') }}">Home</a>
       <li><a href="{{ url_for('about') }}">Missions</a>
       {% if current_user.is_authenticated %}
-        <li><a href="">Apply</a></li>
+        <li><a href="{{url_for('apply')}}">Apply</a></li>
+        <li><a href="">Account</a></li>
         <li><a  href="{{ url_for('logout') }}">Logout</a>
       {% else %}
       <li><a  href="{{ url_for('login') }}">Login</a>
