--- a/spaceconnect/templates/layout.html
+++ b/spaceconnect/templates/layout.html
@@ -22,8 +22,8 @@
       <li><a href="{{ url_for('about') }}">Missions</a>
       {% if current_user.is_authenticated %}
         <li><a href="{{url_for('apply')}}">Apply</a></li>
-        <li><a href="">Account</a></li>
         <li><a  href="{{ url_for('logout') }}">Logout</a>
+        <li style="cursor:pointer;">Hi {{ current_user.username }}</a></li>
       {% else %}
       <li><a  href="{{ url_for('login') }}">Login</a>
       <li><a  href="{{ url_for('register') }}">Register</a>
