--- a/spaceconnect/templates/apply.html
+++ b/spaceconnect/templates/apply.html
@@ -1,4 +1,78 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="content-section">
+    <form class="form-3" method="POST" action="">
+        {{ form.hidden_tag() }}
+        <fieldset class="form-group" >
+            <legend >Induction Form</legend>
+            <div class="form-group">
+                {{ form.fullname.label(class="form-control-label") }}
 
+                {% if form.fullname.errors %}
+                    {{ form.fullname(class="form-control") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.fullname.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.fullname(class="form-control") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.age.label(class="form-control-label") }}
+
+                {% if form.age.errors %}
+                    {{ form.age(class="form-control") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.age.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.age(class="form-control") }}
+                {% endif %}
+            </div>
+            <div class="form-group" >
+                {{ form.mission.label(class="form-control-label") }}
+
+                {% if form.fullname.errors %}
+                    {{ form.mission(class="form-control") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.mission.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.mission(class="form-control") }}
+                {% endif %}
+            </div>
+            <div class="form-group">
+                {{ form.content.label(class="form-control-label") }}
+
+                {% if form.content.errors %}
+                    {{ form.content(class="form-control") }}
+                    <div class="invalid-feedback">
+                        {% for error in form.content.errors %}
+                            <span>{{ error }}</span>
+                        {% endfor %}
+                    </div>
+                {% else %}
+                    {{ form.content(class="form-control") }}
+                {% endif %}
+            </div>
+        </fieldset>
+        <div class="form-group">
+            {{ form.apply(class="btn") }}
+        </div>
+        <br>
+        <hr class="form-hr">
+        <br>
+        <div>
+            <small class="text">
+                Already have an account <a  href="{{ url_for('login') }}">Login Now</a>              </small
+            </small>
+        </div>
+    </form>
+</div>
 {% endblock content %}
