--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -50,7 +50,7 @@
 
 </div>
 <center>
-<small style="color: #b83d57; font-weight: 800;">Judges can see Form responses for(Mission) by going here <a href='{{url_for("admin")}}' style="color: white; text-decoration: none;">Response</a></small>
+<small style="color: #b83d57; font-weight: 800;">Judges can see Form responses(Mission) by going here <a href='{{url_for("admin")}}' style="color: white; text-decoration: none;">Response</a></small>
 </center>
 <br>
 <script src="{{url_for('static', filename='app.js')}}"></script>
