--- a/spaceconnect/templates/apply.html
+++ b/spaceconnect/templates/apply.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 {% block content %}
-<div class="content-section">
+<div class="apply-form">
     <form class="form-3" method="POST" action="">
         {{ form.hidden_tag() }}
         <fieldset class="form-group" >
             <legend >Induction Form</legend>
-            <div class="form-group">
+            <div class="form-group fullname">
                 {{ form.fullname.label(class="form-control-label") }}
 
                 {% if form.fullname.errors %}
@@ -19,7 +19,7 @@
                     {{ form.fullname(class="form-control") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group age">
                 {{ form.age.label(class="form-control-label") }}
 
                 {% if form.age.errors %}
@@ -33,7 +33,7 @@
                     {{ form.age(class="form-control") }}
                 {% endif %}
             </div>
-            <div class="form-group" >
+            <div class="form-group mission-option" >
                 {{ form.mission.label(class="form-control-label") }}
 
                 {% if form.fullname.errors %}
@@ -44,10 +44,11 @@
                         {% endfor %}
                     </div>
                 {% else %}
+                    <br>
                     {{ form.mission(class="form-control") }}
                 {% endif %}
             </div>
-            <div class="form-group">
+            <div class="form-group description">
                 {{ form.content.label(class="form-control-label") }}
 
                 {% if form.content.errors %}
@@ -58,6 +59,7 @@
                         {% endfor %}
                     </div>
                 {% else %}
+                <br><br>
                     {{ form.content(class="form-control") }}
                 {% endif %}
             </div>
@@ -70,7 +72,7 @@
         <br>
         <div>
             <small class="text">
-                Already have an account <a  href="{{ url_for('login') }}">Login Now</a>              </small
+                We will be announcing teams soon !!
             </small>
         </div>
     </form>
