--- a/spaceconnect/templates/login.html
+++ b/spaceconnect/templates/login.html
@@ -1,14 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <form class="form-2" method="POST" action="">
+        <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend >Log In</legend>
+                <legend class="border-bottom mb-4">Log In</legend>
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
-                        {{ form.email(class="form-control") }}
+                        {{ form.email(class="form-control form-control-lg is-invalid") }}
                         <div class="invalid-feedback">
                             {% for error in form.email.errors %}
                                 <span>{{ error }}</span>
@@ -37,16 +37,16 @@
                 </div>
             </fieldset>
             <div class="form-group">
-                {{ form.submit(class="btn ") }}
+                {{ form.submit(class="btn btn-outline-info") }}
             </div>
-            <br>
-            <hr class="form-hr">
-            <br>
-            <div>
-                <small class="text">
-                    Need An Account? <a  href="{{ url_for('register') }}">Sign Up Now</a>
-                </small>
-            </div>
+            <small class="text-muted ml-2">
+                <a href="#">Forgot Password?</a>
+            </small>
         </form>
+    </div>
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            Need An Account? <a class="ml-2" href="{{ url_for('register') }}">Sign Up Now</a>
+        </small>
     </div>
 {% endblock content %}
