--- a/spaceconnect/templates/create_post.html
+++ b/spaceconnect/templates/create_post.html
@@ -43,7 +43,7 @@
         <br>
         <div>
             <small class="text">
-                We will be announcing teams soon !!
+                Based on your data we will be announcing teams soon !!
             </small>
         </div>
     </form>
