--- a/spaceconnect/templates/register.html
+++ b/spaceconnect/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     <div class="content-section">
-        <form method="POST" action="">
+        <form method="POST" class="form-1" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Join Today</legend>
@@ -62,11 +62,13 @@
             <div class="form-group">
                 {{ form.submit(class="btn btn-outline-info") }}
             </div>
+            <br>
+            <hr>
+            <br>
+            <small>
+                Already have an Account? <a class="ml-2" href="{{ url_for('login') }}">Login Now</a>
+            </small>
         </form>
     </div>
-    <div class="border-top pt-3">
-        <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{{ url_for('login') }}">Sign In</a>
-        </small>
-    </div>
+
 {% endblock content %}
