--- a/spaceconnect/templates/admin.html
+++ b/spaceconnect/templates/admin.html
@@ -1,4 +1,15 @@
 {% extends "layout.html" %}
 {% block content %}
-data
+<div class="admin-panel">
+    <center>
+    <h1>Form Responses </h1>
+    <br>
+    <hr>
+</center>
+<br>
+
+<div class="admin-response">
+
+</div>
+</div>
 {% endblock %} %}
