form response mission

--- a/spaceconnect/templates/admin.html
+++ b/spaceconnect/templates/admin.html
@@ -9,7 +9,13 @@
 <br>
 
 <div class="admin-response">
-
+    {% for post in posts %}
+    <h1>{{post.title}}</h1>
+    <br>
+    <p>{{post.content}}</p>
+    <br>
+    <small>{{post.date_posted}}</small>
+    {% endfor %}
 </div>
 </div>
 {% endblock %} %}
