--- a/spaceconnect/static/main.css
+++ b/spaceconnect/static/main.css
@@ -354,7 +354,7 @@ footer i {
   height: 110vh;
   padding-top: 10em;
 }
-.admin-panel h1{
+.admin-panel .admin-header{
   padding-top: 4em;
 }
 .admin-panel hr{
@@ -362,11 +362,22 @@ footer i {
 }
 .admin-panel .admin-response
 {
-  height: 100vh;
   width: 90%;
-  border: 2px solid #fff;
-  border-radius: 10px;
   margin-left: 50px;
-  margin-top: 2.5rem;
+  margin-top: 0.5rem;
   margin-bottom: 5rem;
+  padding: 10px;
+}
+.admin-panel .admin-response .admin-form-data{
+  background:#000;
+  padding: 20px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 10px 10px  rgba(0,0,0,0.5);    
+}
+.admin-panel .admin-response .admin-form-data h1{
+  color: #b83d57;
+  font-family: 'Noto Sans JP', sans-serif;
+  font-weight: 800;
+  margin-bottom : 5px;
 }
