--- a/spaceconnect/templates/about.html
+++ b/spaceconnect/templates/about.html
@@ -10,7 +10,7 @@
     <div class="mission-1">
         <div class="about">
             <h4>
-               <i>Mission 1: Mining & Bomb testing</i>
+               <i>Mission 1: Soil Observation & Bomb testing</i>
             </h4>
             <hr class="hr">
             <ul class="para-div">
@@ -21,7 +21,7 @@
                 </li>
                 <li>
                     <p>
-                        In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are almost there to achieve the milestone that we dreamt of <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
+                       With help of ISRO, We have marked 5 moon's craters for bomb testing and collect samples of minerals near these craters and run test for setting up bases so that we can expand our base on moon. Also to grow crops so that we could introduce agriculture and start building up a village.
                     </p>
                 </li>
             </ul>
@@ -32,7 +32,7 @@
     <div class="mission-1">
         <div class="about">
             <h4>
-               <i>Mission 2: Setting up of a small village near Sector-1Z2</i>
+               <i>Mission 2: Setting up of a base near Area-1Z2</i>
             </h4>
             <hr class="hr">
             <ul class="para-div">
@@ -43,7 +43,7 @@
                 </li>
                 <li>
                     <p>
-                        In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are almost there to achieve the milestone that we dreamt of <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
+                        In 2060, Space X established a base on mars for continuing their research on mars and they found out 2 areas which had the potential to develop for human life. This mission requires helping astronomers with their research on the area and help them setting up a village there.
                     </p>
                 </li>
             </ul>
