--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -24,7 +24,7 @@
           </li>
           <li>
               <p>
-                  In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are almost there to achieve the milestone that we dreamt of <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
+                  In 2050, Space X and Nasa signed a treaty in which they completed many missions together, with help of UN they created a body in which space organisations of many countries participated like ISRO, CNES, etc. and now we are proud to say that we have achieved the milestone that we dreamt of i.e. <b> <i> 'COLONIZATION IN MARS'</b></i>. We are an organsization which works directly under this body, we are here to recruit people who are bold, have leadership qualities and are ambitious to carry out missions and volunteer astronauts, astronomers, other scientist and faculty. 
               </p>
           </li>
       </ul>
@@ -40,8 +40,8 @@
       <ul class="aim-content">
           <li>
                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. At facilis quibusdam inventore. Fugiat omnis consequuntur, voluptatibus, magnam repudiandae magni porro vitae esse qui illum numquam aliquid error sint aliquam recusandae?
-              </p>
+                  Let's imagine your friend is living in mars and here you're working in moon you both are casually facetiming eachother and for you guys its normal but as we think of it we do laugh for such imagination but now our organisation wants to change your this dream into a reality . We believe that a human can explore beyond their imagination, in terms of universe which in itself is an infinite vessel for discoveries. We tend to develop humans and their upcoming generations to adapt in space and work there. 
+                </p>
           </li>
           <li>
               <img src="https://media.discordapp.net/attachments/741244174736556076/840476092321759242/unknown.png" alt="earth" >
