--- a/spaceconnect/templates/home.html
+++ b/spaceconnect/templates/home.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
+<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <div class="landing">
       <div class="svg-container">
           <svg viewbox="0 0 800 400" class="svg">
@@ -44,7 +46,7 @@
                 </p>
           </li>
           <li>
-              <img src="https://media.discordapp.net/attachments/741244174736556076/840476092321759242/unknown.png" alt="earth">
+              <img src="https://media.discordapp.net/attachments/741244174736556076/840476092321759242/unknown.png" alt="earth" class="image-1">
           </li>
       </ul>
   
@@ -52,9 +54,11 @@
   <br>
   <br>
   <center>
-  <small style="color: #b83d57; font-weight: 800;">Judges can see Form responses(Mission) by going here <a href='{{url_for("admin")}}' style="color: white; text-decoration: none;">Response</a></small>
+  <small style="color: #b83d57; font-weight: 800;">Judges can see Form responses(Mission) by going here <a href='{{url_for("admin_user")}}' style="color: white; text-decoration: none;">Response</a></small>
   </center>
   <br>
   <br>
-  <script src="{{url_for('static', filename='app.js')}}"></script>
+  <script src="{{url_for('static', filename='preloader.js')}}"></script>
+  <script src="{{url_for('static', filename='scroll.js')}}"></script>
+
  {% endblock content %}
